[package]
name = "dast"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "standard_framework", "rustls_backend"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.30"
